Bug fix about missing css attribute leading to invisible code editor with the latest version of chrome

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@
 
 #xdevl_codesnippet_editor
 {
+	display: table-cell ;
 	width: 100% ;
 	height: 100% ;
 	font-family: 'Source Code Pro', Monaco, Consolas, Menlo, Inconsolata, monospace ;
